# 20102025

./: .gitignore  syllabus.md
angular/: README.md
angular/examples/: hello.component.ts
cloud-devops/docker/: README.md
cloud-devops/kubernetes/: README.md
cloud-devops/terraform/: README.md
database/mongodb/: README.md
database/postgresql/: README.md
database/prisma/: README.md
database/redis/: README.md
database/supabase/: README.md
dsa/docs/: BUILD.md
dsa/solutions/: README.md
dsa/syllabus/: syllabus.md
evm/: content.txt.txt  syllabus.md
evm/lessons/: README.md
graphql/: README.md
graphql/examples/: schema.graphql
javascript/: advanced.js  asychronous.js  extra.js  fundamentals.js
javascript/js/: app.js  index.html
langchainandlanggraph/: .env.example  01_langchain_fundamentals.ipynb  01_langchain_fundamentals.md  02_chains_and_prompts.ipynb  02_chains_and_prompts.md  03_llm_integration.ipynb  03_llm_integration.md  04_document_processing.ipynb  04_document_processing.md  05_memory_systems.ipynb  05_memory_systems.md  06_agents.ipynb  06_agents.md  07_tools_and_custom_tools.ipynb  07_tools_and_custom_tools.md  08_vector_retrieval.ipynb  08_vector_retrieval.md  09_langgraph_workflows.ipynb  09_langgraph_workflows.md  10_crewai_multi_agent.ipynb  10_crewai_multi_agent.md  11_production_deployment.md  12_performance_optimization.ipynb  12_performance_optimization.md  content.txt.txt  requirements.txt  setup_guide.md  syllabus.md
mcp/next16-feature-app/: README.md  i18n-config.ts  middleware.ts  next.config.ts  package-lock.json  package.json
nestjs/: README.md
next/: README.md  context.txt.txt  syllabus.md
next/00-setup/: README.md
next/04-projects/: README.md
next/05-exercises/: README.md
python/: syllabus.md
python/django/: README.md
python/fastapi/: README.md
react/: README.md  context.txt.txt  index.html  jest.config.js  package.json  syllabus.md
react-ecosystem-libraries/: README.md  context7-template.md  react-ecosystem-libraries.md
react-ecosystem-libraries/ethereum/: README.md
react-ecosystem-libraries/solana/: README.md  project-structure.md
react-ecosystem-libraries/ssg/: README.md
react/src/: App.css  App.jsx
rust/actix/: Cargo.toml  README.md  syllabus.md
rust/actix/src/: examples.rs  handlers.rs  main.rs  middleware.rs  models.rs
rust/axum/: Cargo.toml  README.md  syllabus.md
rust/axum/src/: extractors.rs  handlers.rs  main.rs  middleware.rs  models.rs  websocket.rs
rust/diesel/: Cargo.toml  README.md  syllabus.md
rust/diesel/migrations/2023-xx-xx-xxxxxx_create_activity_logs_table/: down.sql  up.sql
rust/diesel/migrations/2023-xx-xx-xxxxxx_create_comments_table/: down.sql  up.sql
rust/diesel/migrations/2023-xx-xx-xxxxxx_create_posts_table/: down.sql  up.sql
rust/diesel/migrations/2023-xx-xx-xxxxxx_create_users_table/: down.sql  up.sql
rust/diesel/src/: advanced_queries.rs  crud_operations.rs  error_handling.rs  main.rs  models.rs  relationships.rs  schema.rs
rust/rocket/: Cargo.toml  README.md  syllabus.md
rust/rocket/src/: handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
rust/rocket/src/examples/: basic_routes.rs  error_handling.rs  file_upload.rs  middleware.rs  mod.rs  request_data.rs  response_types.rs  state_management.rs  websockets.rs
rust/rust-basics/: LEARNING_PATH.md  README.md  syllabus.md
rust/serde/: Cargo.toml  README.md  syllabus.md
rust/serde/src/: main.rs  models.rs
rust/serde/src/examples/: advanced_features.rs  basic_serialization.rs  custom_serialization.rs  data_formats.rs  error_handling.rs  mod.rs  performance.rs  real_world_examples.rs
rust/sqlx/: Cargo.toml  syllabus.md
rust/sqlx/src/: main.rs  models.rs
rust/sqlx/src/examples/: basic_queries.rs  connection_pool.rs  error_handling.rs  migrations.rs  mod.rs  performance.rs  query_types.rs  real_world_examples.rs  transactions.rs
rust/tide/: Cargo.toml  README.md  syllabus.md
rust/tide/src/: handlers.rs  main.rs  middleware.rs  models.rs
rust/tokio/: Cargo.toml  README.md  syllabus.md
rust/tokio/src/: async_primitives.rs  basics.rs  channels.rs  error_handling.rs  io.rs  main.rs  networking.rs  streams.rs  sync.rs  tasks.rs  time.rs
rust/warp/: Cargo.toml  README.md  syllabus.md
rust/warp/src/: filters.rs  main.rs  models.rs
solana/: syllabus.md
solana/modules/: README.md
solana/scripts/: generate-learning-files.ps1
svelte/: README.md
svelte/examples/: Counter.svelte
trpc/: README.md
trpc/examples/: server.ts
typescript/: .eslintrc.js  .prettierrc  README.md  grpc-examples.ts  jest.config.js  package.json  trpc-examples.ts  tsconfig.json
typescript/authentication/: README.md  betterauth-examples.ts  jwt-examples.ts  nextauth-examples.ts  oauth-examples.ts  session-examples.ts
typescript/express-types/: README.md  examples.ts
typescript/node-types/: README.md  examples.ts
typescript/openapi-spec/: README.md  openapi-generator-examples.ts  redoc-examples.ts  (+1 more)
vue/: README.md
(+684 files in other folders)
