[package]
name = "diesel-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"