[package]
name = "rocket-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rocket_ws = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.1"
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"