[package]
name = "tide-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16"
async-std = { version = "1.12", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
http-types = "2.12"
tide-rustls = "0.3"
log = "0.4"
env_logger = "0.10"