[package]
name = "tokio-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
mini-redis = "0.4"
tokio-stream = "0.1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"