[package]
name = "warp-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
http = "0.2"
hyper = "0.14"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"